@@ -12,18 +12,19 @@ import struct
 from struct import pack, unpack
 import math
 from math import sin, exp
-from sys import exit
 import sys
 import os
 import shortuuid
 import numpy as np
+from scipy.stats import lognorm
+# from numpy.random import default_rng
 
 # import matplotlib.pyplot as plt
 # import matplotlib.patches as patches
 # import matplotlib.path as path
 # import matplotlib.animation as animation
 
-verbose = False
+verbose = True
 
 # how much do we shift the exponentials in the sin */+ exp fitness
 # functions
@@ -34,32 +35,33 @@ random_name = shortuuid.ShortUUID().random(length=5)
 #creates said file
 #open("GA-gen-info_pid{}.out".format(random_name), "x")
 
-# polynomial coefficients.  it has to be even degree (i.e. list has to
-# have odd length), and last (most significant) coefficient has to be
-# negative so that it has a peak
-poly_coefs = [2.8, 1, 1, -3.6, 3.8, 1.6, -0.3]
-
-# Number of the polynomial coefs we are looking to optimize.
-n_poly_coefs = len(poly_coefs)
+mate_func = None      # mate_bitflip, mate_drift, mate_drift_lognormal
+initial_func = None   # make_initial_all_85000, make_initial_random, ...
+fit_func = None     # fit_sin_on_gaussian, fit_flattop_on_gaussian, 
 
 ## parameters of the run
 # set run_seed to an int to force a seed (and get a reproducible run),
 # or None to have a different random sequence eacth time
 random_seed = 123456
-n_pop = 2000
+n_pop = 4000
 assert(n_pop % 2 == 0)
 # define an "oscillation scale" which is the typical distance between
 # the sin() peaks (i.e. the period!) this is then used to define
 # "mutation rate" and entropy bin sizes for drift mutation
-oscillation_scale = 40*math.pi
-mutation_rate = oscillation_scale / 3.0
+oscillation_scale = 80*math.pi
+mutation_rate = 0.10
+mutation_rate_drift = oscillation_scale / 5.0
 num_parents_mating = n_pop // 2
 assert(num_parents_mating % 2 == 0)
 num_generations = 1400
 # add to read
 
 def main():
-#    print_poly_for_plot(f'fit-func_pid{os.getpid()}.out')
+    global initial_func, mate_func, fit_func
+    initial_func = make_initial_rnd_0
+    mate_func = mate_drift_lognormal
+    fit_func = fit_flattop_on_gaussian
+    print_fit_func_for_plot(f'fit-func_pid{os.getpid()}.out')
     # NOTE: you can force the seed to get reproducible runs.
     # comment the random.seed() call to get different runs each time.
     gen_fname = get_gen_info_fname()
@@ -152,12 +154,14 @@ def advance_one_generation(gen, pop):
     #                       "entropy" : entropy,
     #                       "occupancy" : sorted(occupancy, reverse=True)[:20]})
     print_pop_stats(gen, pop, fit_list)
+    if verbose:
+        dump_pop(gen, pop, fit_list)
+    # occupancy_dataframe.append({"occupancy" : sorted(occupancy, reverse=True)[:20]})
     # Selecting the best parents in the population for mating.
     new_pop = select_pool(pop, fit_list, num_parents_mating)
     return new_pop
 
-
-def print_pop_stats(gen, pop, fit_list):
+def make_pop_stats_line(gen, pop, fit_list):
     """Print useful bits of info about the current population list."""
     # print("fitness_list:", fit_list)
     # The best result in the current iteration.
@@ -174,6 +178,10 @@ def print_pop_stats(gen, pop, fit_list):
     line_to_print = (f'max_dude_fit:   {gen}   {max_index}   {max_dude:20.26g}'
                      + f'   {float_to_bin(max_dude)}   {max_fit:20.26g}'
                      + f'   {elite_avg_fit}   {avg_fit}    {entropy}    {sorted(occupancy, reverse=True)[:20]}')
+    return line_to_print
+
+def print_pop_stats(gen, pop, fit_list):
+    line_to_print = make_pop_stats_line(gen, pop, fit_list)
     if verbose:
         print(line_to_print)
         sys.stdout.flush()
@@ -182,9 +190,16 @@ def print_pop_stats(gen, pop, fit_list):
         f.flush()
 
 
+def dump_pop(gen, pop, fit_list):
+    print_pop_stats(gen, pop, fit_list)
+    with open(get_gen_info_fname(), 'a') as f:
+        f.write(line_to_print + '\n')
+        f.flush()
+
+
+
 def get_gen_info_fname():
     return f'GA-gen-info_pid{os.getpid()}.out'
-
 
 def calc_pop_fitness(pop):
     """Calculates the fitnesses of each member of a population and returns
@@ -203,14 +218,9 @@ def calc_fitness(x):
     """
     if not math.isfinite(x):
         return -sys.float_info.max
-    return fit_sin_on_gaussian(x)
-    # fit = 0
-    # for i in range(n_poly_coefs):
-    #     fit += poly_coefs[i] * x**i
-    # # now multiply by a gaussian envelope
-    # # fit = fit * math.exp(-x**2 / 100.0)
-    # fit = math.cos(x-40)+10*math.exp(-(x-40)**2/5000)
-    # fit = math.sin((x-400)/20) * (1 + 10*math.exp(-(x-400)**2/100000.0))
+    # return fit_sin_on_gaussian(x)
+    # return fit_flattop_on_gaussian(x)
+    return fit_func(x)
 
 def fit_sin_on_gaussian(x):
     # fit = math.sin((x-400)/20) * (1 + 10*math.exp(-(x-400)**2/100000.0))
@@ -219,6 +229,28 @@ def fit_sin_on_gaussian(x):
     if not math.isfinite(fit):
         return -sys.float_info.max
     return fit
+
+def fit_flattop_on_gaussian(x):
+    """A flat top fitness function should allow for constant fitness
+    drifting and more interesting plateaus."""
+    # first adjust for the shift
+    xp = x - shift
+    # then adjust for keeping a flat region
+    xm = xp - xp % (2*oscillation_scale)
+    exp_base = 300*np.exp(-xm**2/1000000.0)
+    flattop_max = exp_base + 10*np.exp(-xm**2/1000000.0)
+    flattop_min = exp_base - 10*np.exp(-xm**2/1000000.0)
+    # fit = 100*exp(-xp**2/1000000) + 2*sin(2*math.pi*xp/oscillation_oscillation_scale)
+    # now try to figure out a square wave-ish thing that rides on top
+    # of the gaussian
+    if xp % oscillation_scale < oscillation_scale/2:
+        fit = flattop_min
+    else:
+        fit = flattop_max
+    if not math.isfinite(fit):
+        return -sys.float_info.max
+    return fit
+    
 
 def select_pool(pop, fit_list, num_parents_mating):
     """Take the population, pick out the top half of the parents, and
@@ -237,7 +269,8 @@ def select_pool(pop, fit_list, num_parents_mating):
         ## for now we have this set up so you can choose your mating
         ## function to be mate_bitflip() or mate_drift()
         # c1, c2 = mate_bitflip(p1, p2)
-        c1, c2 = mate_drift(p1, p2)
+        # c1, c2 = mate_drift(p1, p2)
+        c1, c2 = mate_func(p1, p2)
         child_pop.append(c1)
         child_pop.append(c2)
     new_pop = np.concatenate((child_pop, top_half_parents))
@@ -320,23 +353,26 @@ def calc_entropy_drift(gen, pop):
     the species to be linearly spaced bins in the population's range
     of values.  Then we use occupancy levels in those bins to
     calculate entropy."""
-    n_bins = n_pop
+    n_bins = 2*n_pop
     pmin = np.min(pop)
     pmax = np.max(pop)
     this_pop_spread = pmax - pmin
     this_center = pmin + (pmax - pmin)/2.0
-    canonical_pop_spread = 30 * oscillation_scale
+    canonical_pop_spread = 60 * oscillation_scale
     canonical_pmin = this_center - canonical_pop_spread / 2.0
     canonical_pmax = this_center + canonical_pop_spread / 2.0
     global first_pop_spread
     if first_pop_spread == -1:
         first_pop_spread = this_pop_spread
     if verbose:
-        print(f'#POP_SPREAD: {pmin}   {pmax}   {this_pop_spread}   {oscillation_scale}'
-              + '   {this_pop_spread / oscillation_scale}')
+        print(f'#POP_SPREAD: {pmin}   {pmax}   {this_center}   {this_pop_spread}'
+              + f'   {canonical_pop_spread}   {oscillation_scale}'
+              + f'   {this_pop_spread / oscillation_scale}')
     bin_width = canonical_pop_spread / n_bins
     occupancy = [0]*n_bins
-    for i in range(n_bins):
+    occupancy[0] = count_pop_in_bin(pop, -sys.float_info.max, canonical_pmin + bin_width)
+    occupancy[n_bins-1] = count_pop_in_bin(pop, canonical_pmax - bin_width, sys.float_info.max)
+    for i in range(1, n_bins-1):
         x_left_edge = canonical_pmin + i * bin_width
         x_right_edge = canonical_pmin + (i+1) * bin_width
         occupancy[i] = count_pop_in_bin(pop, x_left_edge, x_right_edge)
@@ -378,13 +414,26 @@ def mate_drift(p1, p2):
     """Mate two parents and get two children; do mutations by drifting the
     floating point value."""
     c1 = (p1 + p2) / 2.0
-    c1 += (random.random() - 0.5) * mutation_rate
+    c1 += (random.random() - 0.5) * mutation_rate_drift
     c2 = (p1 + p2) / 2.0
-    c2 += (random.random() - 0.5) * mutation_rate
-    # c2 += np.random.lognormal(mutation_rate * 100)
-    if random.random() < 0.005:   # small % of the time make shift 100 times bigger
-        c1 += (random.random() - 0.5) * 5*mutation_rate
-        c2 += (random.random() - 0.5) * 5*mutation_rate
+    c2 += (random.random() - 0.5) * mutation_rate_drift
+    if random.random() < 0.005:   # small % of the time make shift much bigger
+        c1 += (random.random() - 0.5) * 10*mutation_rate_drift
+        c2 += (random.random() - 0.5) * 10*mutation_rate_drift
+    return c1, c2
+
+def mate_drift_lognormal(p1, p2):
+    direction = 1 if random.random() < 0.5 else -1
+    c1 = (p1 + p2) / 2.0
+    c2 = (p1 + p2) / 2.0
+    if random.random() < mutation_rate:
+        drift1 = np.random.lognormal(mean=1, sigma=10)
+        c1 += drift1
+        print(f'#drift1: {drift1} -> {c1}')
+    if random.random() < mutation_rate:
+        drift2 = np.random.lognormal(mean=1, sigma=10)
+        c2 += drift2
+        print(f'#drift2: {drift2} -> {c2}')
     return c1, c2
 
 
@@ -470,9 +519,13 @@ def print_metadata(fname, gen_fname):
 ##RUN_DATETIME: {dt_str}
 ##OUTPUT_FILENAME: {gen_fname}
 ##SHIFT: {shift}
-##POLY_COEFS: {poly_coefs.__str__()}
 ##random_seed: {random_seed}
+##MATE_FUNCTION: {mate_func.__name__}
+##INITIAL_FUNCTION: {initial_func.__name__}
+##FITNESS_FUNCTION: {fit_func.__name__}
 ##MUTATION_RATE: {mutation_rate}
+##MUTATION_RATE_DRIFT: {mutation_rate_drift}
+##OSCILLATION_SCALE: {oscillation_scale}
 ##N_POP: {n_pop}
 ##N_GENERATIONS: {num_generations}
 ##COLUMN0: constant string max_dude_fit:
@@ -487,14 +540,16 @@ def print_metadata(fname, gen_fname):
 """)
     if len(fname) == 0:         # no file: print to stdout
         sys.stdout.write(meta_str)
+        sys.stdout.flush()
     else:
         with open(fname, 'a') as f:
             f.write(meta_str)
 
-def print_poly_for_plot(fname):
-    x = shift - 1000
-    with open(fname, 'w') as f:
-        while x <= shift + 1000:
+def print_fit_func_for_plot(fname):
+    x = shift - 5000
+    print_metadata(fname, fname)
+    with open(fname, 'a') as f:
+        while x <= shift + 5000:
             f.write(f'fit_plot:   {x}   {calc_fitness(x)}\n')
             x += 0.5
     print(f'# wrote function info to {fname}')
@@ -528,12 +583,41 @@ def make_initial_pop(n_pop):
     #                                size=n_pop)
 
     # population = np.full(n_pop, -1000.0)
-    population = np.full(n_pop, 85000.0)
+    # population = np.full(n_pop, 85000.0)
     # population = np.random.uniform(low=-200000.0000000001, 
     #                                # high=100000.0000000002,
     #                                high=-100000.0000000002,
     #                                size=n_pop)
+    population = initial_func(n_pop)
     return population
+
+def make_initial_rnd_85k(n_pop):
+    pop = np.random.uniform(low=80000.0, high=90000.0, size=n_pop)
+    return pop
+
+def make_initial_rnd_80k(n_pop):
+    pop = np.random.uniform(low=70000.0, high=90000.0, size=n_pop)
+    return pop
+
+def make_initial_rnd_0(n_pop):
+    pop = np.random.uniform(low=-10000.0, high=10000.0, size=n_pop)
+    return pop
+
+def make_initial_all_zero(n_pop):
+    pop = np.full(n_pop, 0.0);
+    return pop
+
+def make_initial_all_80k(n_pop):
+    pop = np.full(n_pop, 80000.0);
+    return pop
+
+def make_initial_all_85k(n_pop):
+    pop = np.full(n_pop, 85000.0);
+    return pop
+
+def make_initial_all_minus1k(n_pop):
+    pop = np.full(n_pop, -1000.0);
+    return pop
 
 # run_tests()
 if __name__ == '__main__':
